Added new interface with Zynq for automated acquisition from the PDM

--- a/CPU/test/src/Makefile
+++ b/CPU/test/src/Makefile
@@ -7,10 +7,15 @@ CFLAGS:=$(DEBUG_FLAGS) $(OPTIMIZE_FLAGS) $(WARNING_FLAGS)
 OUTDIR = ../bin/
 
 TESTS = \
+	pdm_acq \
     test_pdm \
     test_systems \
 
 all:	$(TESTS)
+
+pdm_acq: pdm_acq.c
+	$(CC) $(CFLAGS) -o pdm_acq pdm_acq.c 
+	mv pdm_acq $(OUTDIR)
 
 test_pdm: test_pdm.c
 	$(CC) $(CFLAGS) -o test_pdm test_pdm.c 
