--- a/CPU/test/src/Makefile
+++ b/CPU/test/src/Makefile
@@ -8,6 +8,7 @@ OUTDIR = ../bin/
 
 TESTS = \
 	pdm_acq \
+	pdm_stop \ 
     test_pdm \
     test_systems \
 
@@ -16,6 +17,10 @@ all:	$(TESTS)
 pdm_acq: pdm_acq.c
 	$(CC) $(CFLAGS) -o pdm_acq pdm_acq.c 
 	mv pdm_acq $(OUTDIR)
+
+pdm_stop: pdm_stop.c
+	$(CC) $(CFLAGS) -o pdm_stop pdm_stop.c 
+	mv pdm_stop $(OUTDIR)
 
 test_pdm: test_pdm.c
 	$(CC) $(CFLAGS) -o test_pdm test_pdm.c 
