Update the EM software setup scripts and makefile

--- a/CPU/CPUsoftware/src/makefile
+++ b/CPU/CPUsoftware/src/makefile
@@ -1,8 +1,8 @@
 CC=g++
 OPTIMIZE_FLAGS=-O3
 WARNING_FLAGS=-Wall
-LIB_FLAGS=-stdc++11
-CFLAGS:=$(DEBUG_FLAGS) $(OPTIMIZE_FLAGS) $(WARNING_FLAGS)
+LIB_FLAGS=-std=c++11
+CFLAGS:=$(DEBUG_FLAGS) $(OPTIMIZE_FLAGS) $(WARNING_FLAGS) $(LIB_FLAGS)
 
 OUTDIR = ../bin/
 
