--- a/CPU/CPUsoftware/src/makefile
+++ b/CPU/CPUsoftware/src/makefile
@@ -1,7 +1,7 @@
 CC=g++
 OPTIMIZE_FLAGS=-O3
 WARNING_FLAGS=-Wall
-LIB_FLAGS=-std=c++11
+LIB_FLAGS:=-std=c++11 -pthread
 CFLAGS:=$(DEBUG_FLAGS) $(OPTIMIZE_FLAGS) $(WARNING_FLAGS) $(LIB_FLAGS)
 
 OUTDIR = ../bin/
