Update the EM software

--- a/CPU/CPUsoftware/src/makefile
+++ b/CPU/CPUsoftware/src/makefile
@@ -8,12 +8,18 @@ OUTDIR = ../bin/
 
 TESTS = \
 	test_system \
+	no_hv \
 
 all:    $(TESTS)
 
 test_system: test_system.cpp
 	$(CC) $(CFLAGS) -o test test_system.cpp globals.cpp cpu_functions.cpp general.cpp 
 	mv test $(OUTDIR)
+
+no_hv: no_hv.cpp
+	$(CC) $(CFLAGS) -o no_hv no_hv.cpp globals.cpp cpu_functions.cpp general.cpp 
+	mv no_hv $(OUTDIR)
+
 
 clean:
 	rm -f *.o *.dat *~ $(TESTS)
