--- a/CPU/CPUsoftware/src/makefile
+++ b/CPU/CPUsoftware/src/makefile
@@ -1,8 +1,9 @@
 CC=g++
 OPTIMIZE_FLAGS=-O3
 WARNING_FLAGS=-Wall
-LIB_FLAGS:=-std=c++11 -pthread
-CFLAGS:=$(DEBUG_FLAGS) $(OPTIMIZE_FLAGS) $(WARNING_FLAGS) $(LIB_FLAGS)
+INCLUDE_FLAGS:=-I../include
+LIB_FLAGS:=-L../lib -lrtd-dm75xx -std=c++11 -pthread
+CFLAGS:=$(INCLUDE_FLAGS) $(OPTIMIZE_FLAGS) $(WARNING_FLAGS) $(LIB_FLAGS)
 
 OUTDIR = ../bin/
 
@@ -19,7 +20,6 @@ test_system: test_system.cpp
 no_hv: no_hv.cpp
 	$(CC) $(CFLAGS) -o no_hv no_hv.cpp globals.cpp cpu_functions.cpp general.cpp 
 	mv no_hv $(OUTDIR)
-
 
 clean:
 	rm -f *.o *.dat *~ $(TESTS)
