Update the EM software: makefile

--- a/CPU/CPUsoftware/src/makefile
+++ b/CPU/CPUsoftware/src/makefile
@@ -2,8 +2,8 @@ CC=g++
 OPTIMIZE_FLAGS=-O3
 WARNING_FLAGS=-Wall
 INCLUDE_FLAGS:=-I../include
-LIB_FLAGS:=-L../lib -lrtd-dm75xx -lm -std=c++11 -pthread
-CFLAGS:=$(INCLUDE_FLAGS) $(OPTIMIZE_FLAGS) $(WARNING_FLAGS)
+LIB_FLAGS:=-L../lib -lrtd-dm75xx -lm -lpthread
+CFLAGS:=-std=c++11 $(INCLUDE_FLAGS) $(OPTIMIZE_FLAGS) $(WARNING_FLAGS)
 
 OUTDIR = ../bin/
 
