Update the EM software: processing incoming data

--- a/CPU/CPUsoftware/src/makefile
+++ b/CPU/CPUsoftware/src/makefile
@@ -1,9 +1,10 @@
 CC=g++
 OPTIMIZE_FLAGS=-O3
+DEBUG_FLAGS=-g
 WARNING_FLAGS=-Wall
 INCLUDE_FLAGS:=-I../include
 LIB_FLAGS:=-L../lib -lrtd-dm75xx -lm -lpthread
-CFLAGS:=-std=c++11 $(INCLUDE_FLAGS) $(OPTIMIZE_FLAGS) $(WARNING_FLAGS)
+CFLAGS:=-std=c++11 $(INCLUDE_FLAGS) $(OPTIMIZE_FLAGS) $(WARNING_FLAGS) $(DEBUG_FLAGS)
 
 OUTDIR = ../bin/
 
