--- a/CPU/analog/src/Makefile
+++ b/CPU/analog/src/Makefile
@@ -10,6 +10,7 @@ TESTS = \
     test_photodiode \
     test_pdm_photodiode \
     test_dio \
+    test_lvps_switch \
 
 all:	$(TESTS)
 
@@ -22,6 +23,8 @@ test_pdm_photodiode: test_pdm_photodiode.c
 test_dio: test_dio.c
 	$(CC) $(CFLAGS) -o ../bin/test_dio test_dio.c $(LIBRARY_FLAGS)
 
+test_dio: test_lvps_switch.c
+	$(CC) $(CFLAGS) -o ../bin/test_lvps_switch test_lvps_switch.c $(LIBRARY_FLAGS)
 
 clean:
 	rm -f *.o *.dat *~ $(TESTS)
