--- a/CPU/cameras/multiplecam/parfiles/currentNIR.ini
+++ b/CPU/cameras/multiplecam/parfiles/currentNIR.ini
@@ -1,7 +1,6 @@
-FRAMERATESET on
-FRAMERATE 10.0 
-SHUTTER 100.0 
-SHUTTER    20.0
+FRAMERATESET OFF
+FRAMERATE 0.0 
+SHUTTER 1000.0 
 BRIGHTSET on
 BRIGHTNESS 0
 AUTOEXPOSET ON
