Edit the camera frame rate in the configuration files

--- a/CPU/cameras/multiplecam/parfiles/currentNIR.ini
+++ b/CPU/cameras/multiplecam/parfiles/currentNIR.ini
@@ -1,6 +1,6 @@
-FRAMERATESET OFF
-FRAMERATE 0.0 
-SHUTTER 1000.0 
+FRAMERATESET ON
+FRAMERATE 1.0 
+SHUTTER 100.0 
 BRIGHTSET on
 BRIGHTNESS 0
 AUTOEXPOSET ON
