--- a/CPU/cameras/multiplecam/parfiles/currentVIS.ini
+++ b/CPU/cameras/multiplecam/parfiles/currentVIS.ini
@@ -1,6 +1,6 @@
-FRAMERATESET OFF
-FRAMERATE 0.0 
-SHUTTER 1000.0 
+FRAMERATESET ON
+FRAMERATE 1.0 
+SHUTTER 100.0 
 GAIN 18.06
 BRIGHTNESS 0
 BRIGHTSET off
