Updated the makefile to avoid debug symbol generation on OSX

--- a/CPU/CPUsoftware/src/makefile
+++ b/CPU/CPUsoftware/src/makefile
@@ -1,11 +1,20 @@
+platform=$(shell uname -s)
+
 CC=gcc
 CXX=g++
 OPTIMIZE_FLAGS=-O3
 DEBUG_FLAGS=-g
 WARNING_FLAGS=-Wall
 INCLUDE_FLAGS:=-I../include
+
+ifeq ($(platform), Darwin)
+LIB_FLAGS:=-L../lib -lm -lpthread -lusb-1.0
+CFLAGS:=-std=c++11 $(INCLUDE_FLAGS) $(OPTIMIZE_FLAGS) $(WARNING_FLAGS) 
+else
 LIB_FLAGS:=-L../lib -lrtd-dm75xx -lm -lpthread -lusb-1.0
 CFLAGS:=-std=c++11 $(INCLUDE_FLAGS) $(OPTIMIZE_FLAGS) $(WARNING_FLAGS) $(DEBUG_FLAGS)
+endif
+
 
 OUTDIR = ../bin/
 
