--- a/CPU/CPUsoftware/config/dummy.conf
+++ b/CPU/CPUsoftware/config/dummy.conf
@@ -2,4 +2,6 @@ CATHODE_VOLTAGE 3
 DYNODE_VOLTAGE 3500 
 SCURVE_START 0
 SCURVE_STEP 10
-SCURVE_STOP 1000
+SCURVE_STOP 1023
+SCURVE_ACC 128
+DAC_LEVEL 500
