Add the LvpsManager to the main mecontral software
This class will control switching and monitoring of subsystems via the LVPS

--- a/CPU/CPUsoftware/lib/Makefile
+++ b/CPU/CPUsoftware/lib/Makefile
@@ -3,7 +3,7 @@
 #
 #	FILE DESCRIPTION: Make description file for building user library
 #
-#	PROJECT NAME: Linux Software (DM75xx)
+#	PROJECT NAME: Linux Software (DM75xx) & Linux Software ADIO 
 #
 #	PROJECT VERSION: (Defined in README.TXT)
 #
@@ -16,7 +16,6 @@
 #	Embedded Technologies, Inc.
 #
 
-
 CC=gcc
 DEBUG_FLAGS=-g
 INCLUDE_FLAGS=-I../include
@@ -24,13 +23,20 @@ OPTIMIZE_FLAGS=-O6
 WARNING_FLAGS=-Wall
 CFLAGS:=$(DEBUG_FLAGS) $(INCLUDE_FLAGS) $(OPTIMIZE_FLAGS) $(WARNING_FLAGS)
 
-all:			librtd-dm75xx.a
+all:	librtd-dm75xx.a \
+	librtd-aDIO.a 
 
 librtd-dm75xx.a:	librtd-dm75xx.o
 	ar -cru librtd-dm75xx.a librtd-dm75xx.o
 
 librtd-dm75xx.o:	librtd-dm75xx.c
 	$(CC) $(CFLAGS) -c librtd-dm75xx.c
+
+librtd-aDIO.a:	librtd-aDIO.o
+	ar -cru librtd-aDIO.a librtd-aDIO.o
+
+librtd-aDIO.o:	librtd-.DIO.c
+	$(CC) $(CFLAGS) -c librtd-aDIO.c
 
 clean:
 	rm -f *.o *.a *~
