--- a/CPU/CPUsoftware/lib/Makefile
+++ b/CPU/CPUsoftware/lib/Makefile
@@ -23,8 +23,7 @@ OPTIMIZE_FLAGS=-O6
 WARNING_FLAGS=-Wall
 CFLAGS:=$(DEBUG_FLAGS) $(INCLUDE_FLAGS) $(OPTIMIZE_FLAGS) $(WARNING_FLAGS)
 
-all:	librtd-dm75xx.a \
-	librtd-aDIO.a \
+all:	librtd-dm75xx.a librtd-aDIO.a 
 
 librtd-dm75xx.a:	librtd-dm75xx.o
 	ar -cru librtd-dm75xx.a librtd-dm75xx.o
