--- a/CPU/CPUsoftware/src/makefile
+++ b/CPU/CPUsoftware/src/makefile
@@ -11,7 +11,7 @@ ifeq ($(platform), Darwin)
 LIB_FLAGS:=-L../lib -lm -lpthread -lusb-1.0
 CFLAGS:=-std=c++11 $(INCLUDE_FLAGS) $(OPTIMIZE_FLAGS) $(WARNING_FLAGS) 
 else
-LIB_FLAGS:=-L../lib -lrtd-dm75xx -lm -lpthread -lusb-1.0
+LIB_FLAGS:=-L../lib -lrtd-dm75xx -lrtd-adio -lm -lpthread -lusb-1.0
 CFLAGS:=-std=c++11 $(INCLUDE_FLAGS) $(OPTIMIZE_FLAGS) $(WARNING_FLAGS) $(DEBUG_FLAGS)
 endif
 SOURCES := $(shell find . -name '*.cpp')
