--- a/CPU/cameras/multiplecam_old/multiplecam/parfiles/defaultNIR.ini
+++ b/CPU/cameras/multiplecam_old/multiplecam/parfiles/defaultNIR.ini
@@ -1,7 +1,7 @@
 FRAMERATESET on
-FRAMERATE 10.0 
+FRAMERATE 1.0 
 SHUTTER 100.0 
-SHUTTER    20.0
+GAIN    20.0
 BRIGHTSET on
 BRIGHTNESS 0
 AUTOEXPOSET ON
