--- a/CPU/CPUsoftware/config/dummy_local.conf
+++ b/CPU/CPUsoftware/config/dummy_local.conf
@@ -1,5 +1,7 @@
 CATHODE_VOLTAGE 3 
 DYNODE_VOLTAGE 3500 
 SCURVE_START 0
-SCURVE_STEP 10
+SCURVE_STEP 8
 SCURVE_STOP 1023
+SCURVE_ACC 16384
+DAC_LEVEL 500
