Add separate command for LVPS switching outside of main program

--- a/CPU/CPUsoftware/src/makefile
+++ b/CPU/CPUsoftware/src/makefile
@@ -14,18 +14,23 @@ else
 LIB_FLAGS:=-L../lib -lrtd-dm75xx -lrtd-aDIO -lm -lpthread -lusb-1.0
 CFLAGS:=-std=c++11 $(INCLUDE_FLAGS) $(OPTIMIZE_FLAGS) $(WARNING_FLAGS) $(DEBUG_FLAGS)
 endif
-SOURCES := $(shell find . -name '*.cpp')
+SOURCES := $(shell find . -name '*.cpp' -and -not -name "*lvps_switch*")
 
 OUTDIR = ../bin/
 
 TESTS = \
 	mecontrol \
+	lvps_switch \
 
 all:    $(TESTS)
 
 mecontrol: mecontrol.cpp
 	$(CXX) $(CFLAGS) $(SOURCES) $(LIB_FLAGS) -o mecontrol 
 	mv mecontrol $(OUTDIR)
+
+lvps_switch: lvps_switch.cpp
+	$(CXX) $(CFLAGS) lvps_switch.cpp LvpsManager.cpp $(LIB_FLAGS) -o lvps_switch 
+	mv lvps_switch $(OUTDIR)
 
 clean:
 	rm -f *.o *.dat *~ $(TESTS)
