Fix makefile to include headers in dependencies

--- a/CPU/CPUsoftware/Makefile
+++ b/CPU/CPUsoftware/Makefile
@@ -49,7 +49,7 @@ $(BINDIR)/$(APP): buildrepo $(OBJS)
 
 
 # objects
-$(OBJDIR)/%.o: %.$(SRCEXT)
+$(OBJDIR)/%.o: %.$(SRCEXT) %.h
 	@echo "Generating dependencies for $<..."
 	@$(call make-depend,$<,$@,$(subst .o,.d,$@))
 	@echo "Compiling $<..."
