Fix bug in library makefile

--- a/CPU/CPUsoftware/lib/Makefile
+++ b/CPU/CPUsoftware/lib/Makefile
@@ -18,7 +18,7 @@
 
 CC=gcc
 DEBUG_FLAGS=-g
-INCLUDE_FLAGS=-I../include
+INCLUDE_FLAGS=-I../inc
 OPTIMIZE_FLAGS=-O6
 WARNING_FLAGS=-Wall
 CFLAGS:=$(DEBUG_FLAGS) $(INCLUDE_FLAGS) $(OPTIMIZE_FLAGS) $(WARNING_FLAGS)
