update libusb version

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: cpp
 
 before install:
   - sudo apt-get -qq update
-  - sudo apt-get install -y libusb-1.0-0 inotify-tools
+  - sudo apt-get install -y libusb-1.0 inotify-tools
 
 install: true
 
