--- a/CPU/cameras/multiplecam/parfiles/currentNIR.ini
+++ b/CPU/cameras/multiplecam/parfiles/currentNIR.ini
@@ -1,8 +1,7 @@
-FRAMERATESET on
+FRAMERATESET OFF
 FRAMERATE 10.0 
 SHUTTER 100.0 
-SHUTTER    20.0
-BRIGHTSET on
+BRIGHTSET OFF
 BRIGHTNESS 0
-AUTOEXPOSET ON
+AUTOEXPOSET OFF
 AUTO_EXPOSURE -11.000
