--- a/CPU/cameras/multiplecam/parfiles/currentVIS.ini
+++ b/CPU/cameras/multiplecam/parfiles/currentVIS.ini
@@ -3,6 +3,6 @@ FRAMERATE 0.0
 SHUTTER 100.0 
 GAIN 18.06
 BRIGHTNESS 0
-BRIGHTSET off
+BRIGHTSET OFF
 AUTO_EXPOSURE -1.608
-AUTOEXPOSET on
+AUTOEXPOSET OFF
