Fix bug in aDIO and analog makefiles for drivers

--- a/CPU/analog/driver/Makefile
+++ b/CPU/analog/driver/Makefile
@@ -18,7 +18,7 @@
 #
 
 
-MY_CFLAGS := -I$(shell pwd)/../../CPUsoftware/lib
+MY_CFLAGS := -I$(shell pwd)/../../CPUsoftware/include
 
 #
 # Kernel build environment directory.  Supposedly it is safer to use this
