--- a/CPU/CPUsoftware/config/dummy_local.conf
+++ b/CPU/CPUsoftware/config/dummy_local.conf
@@ -9,6 +9,7 @@ N1 4
 N2 4
 L2_N_BG 4
 L2_LOW_THRESH 0
-LIGHT_THRESHOLD 100
+DAY_LIGHT_THRESHOLD 100
+NIGHT_LIGHT_THRESHOLD 60
 LIGHT_POLL_TIME	2
 LIGHT_ACQ_TIME 2
