Remove DM75 lib dependencies

--- a/CPU/CPUsoftware/Makefile
+++ b/CPU/CPUsoftware/Makefile
@@ -24,7 +24,7 @@ CFLAGS   = -std=c++11 -Wall -pedantic -c -O3 $(INCLUDES) $(DEBUG)
 LDFLAGS  = -L./lib -lm -lpthread -lusb-1.0 
 else
 CFLAGS   = -std=c++11 -Wall -pedantic -c -O3 -fsanitize=address $(INCLUDES) $(DEBUG)
-LDFLAGS  = -L./lib -lrtd-dm75xx -lrtd-aDIO -lm -lpthread -lusb-1.0 -lasan
+LDFLAGS  = -L./lib -lrtd-aDIO -lm -lpthread -lusb-1.0 -lasan
 endif
 
 # compiler
