--- a/CPU/CPUsoftware/config/dummy_usb0.conf
+++ b/CPU/CPUsoftware/config/dummy_usb0.conf
@@ -10,6 +10,7 @@ N2 4
 L2_N_BG 4
 L2_LOW_THRESH 0
 ANA_SENSOR_NUM 0
+AVERAGE_DEPTH 3
 DAY_LIGHT_THRESHOLD 100
 NIGHT_LIGHT_THRESHOLD 60
 LIGHT_POLL_TIME	2
