--- a/CPU/CPUsoftware/config/dummy_usb0.conf
+++ b/CPU/CPUsoftware/config/dummy_usb0.conf
@@ -9,9 +9,12 @@ N1 4
 N2 4
 L2_N_BG 4
 L2_LOW_THRESH 0
+ARDUINO_WAIT_PERIOD 1
 ANA_SENSOR_NUM 0
 AVERAGE_DEPTH 3
 DAY_LIGHT_THRESHOLD 100
 NIGHT_LIGHT_THRESHOLD 60
 LIGHT_POLL_TIME	2
 LIGHT_ACQ_TIME 2
+STATUS_PERIOD 30
+PWR_ON_DELAY 2
